--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for WWW::Mechanize
 
 {{$NEXT}}
+    - Don't make assumptions about port 80 in test (GH#299) (Olaf Alders)
 
 1.97      2020-05-14 00:46:53Z
     - Respect CDATA[[ sections when parsing HTML (GH#298) (Max Maischein)
