--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for WWW::Mechanize
 
+{{$NEXT}}
+
 2.02      2020-10-13 13:50:28Z
     [ENHANCEMENTS]
     - Add redirects() as a short to HTTP::Response->redirects (GH#116) (Julien Fiegehenn)
