--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for WWW::Mechanize
 
 {{$NEXT}}
+    - Document that form_id() accepts an id, not a name (GH#319) (Olaf Alders)
 
 2.03      2020-11-10 14:47:04Z
     [FIXED]
