--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@ Revision history for WWW::Mechanize
 
 {{$NEXT}}
     [ENHANCEMENTS]
-    - Add a head() method to allow relative URLs (Julien Fiegehenn)
+    - Add a head() method to allow relative URLs (GH#321) (Julien Fiegehenn)
 
     [DOCUMENTATION]
     - Document that form_id() accepts an id, not a name (GH#319) (Olaf Alders)
