increment $VERSION after 2.05 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for WWW::Mechanize
 
+{{$NEXT}}
+
 2.05      2021-09-21 14:06:00Z
     - Update docs for protocols_allowed and protocols_forbidden (GH#323) (Olaf
       Alders)
