Don't try to follow redirects in tests
An upstream change in LWP::UserAgent now allows meta-refresh tags to be
followed by default. Set max_redirect to 0 to prevent this from
happening in tests.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for WWW::Mechanize
 
 {{$NEXT}}
+    - Don't follow redirects in some tests (GH#326) (Olaf Alders)
 
 2.06      2021-10-25 20:56:12Z
     [DOCUMENTATION]
