--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for WWW::Mechanize
 
 {{$NEXT}}
+    [TESTS]
+    - Drop CGI and HTTP::Server::Simple::CGI test dependencies (GH#327) (Graham
+      Knop)
 
 2.07      2022-04-29 15:39:17Z
     [FIXED]
