--- a/lib/WWW/Mechanize/FAQ.pod
+++ b/lib/WWW/Mechanize/FAQ.pod
@@ -312,6 +312,14 @@ the HTML to a file, and run F<mech-dump> on the file.
 
 You need either L<IO::Socket::SSL> or L<Crypt::SSLeay> installed.
 
+=head2 Why don't file:// URLs to files with a question mark in the name work?
+
+If you have a local file named C<how-are-you?>, the URL for that file is
+C<file:how-are-you%3f>. That's because L<URI::file> is required to be
+url-encoded, just like any URL pointing to somewhere on the internet has to be
+if it contains reserved characters such as C<?>, C</> or C<@>. This is specified
+in RFC 3986. See L<URI::Escape> for a full list of reserved characters.
+
 =head2 Why do I get "Input 'fieldname' is readonly"?
 
 You're trying to change the value of a hidden field and you have
