--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for WWW::Mechanize
 
 {{$NEXT}}
+    [FIXED]
+    - tick() can now handle checkboxes without a value (GH#331) (Jordan M Adler
+      and Julien Fiegehenn)
 
 2.10      2022-07-04 21:06:13Z
 
