increment $VERSION after 2.13 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for WWW::Mechanize
 
+{{$NEXT}}
+
 2.13      2022-07-29 09:44:46Z
     [ENHANCEMENTS]
     - mech_dump now treats all local files like HTML regardless of what it
