mech-dump errors when a request failed #292
Note the output capturing seems to not work properly on Windows for
Perls 5.14 and possibly 5.16. While I found a source claiming the weird
error message 'Can't spawn "cmd.exe": No such file or directory'
captured from STDOUT after calling system() has to do with $? being -1
and only occurs in 5.14 (and maybe later, but had subsequently been
fixed) I have not found anything in any perldeltas following 5.14. I
have decided to simply exclude this test on these Perl versions until we
know more.

--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@ Revision history for WWW::Mechanize
     [ENHANCEMENTS]
     - Add autocheck() to enable or disable autochecking at run time in
       addition to setting it at object creation (GH#232) (Julien Fiegehenn)
+    - mech_dump now errors appropriately when it cannot open a URL or file
+      instead of claiming it has the wrong MIME type (GH#292) (Julien Fiegehenn)
 
 2.13      2022-07-29 09:44:46Z
     [ENHANCEMENTS]
