allow undef files when Content is present
This commit bumps HTML::Form to 6.08 to fix a bug that would not allow
us to set the content from a header without the file argument present.

It also fixes another bug where the code blew up if a non-existent field
was requested.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,12 @@
 Revision history for WWW::Mechanize
 
 {{$NEXT}}
+    [FIXED]
+    - File upload fields now correctly handle overwriting the file name and
+      passing in content without a real file (GH#249) (Gil Magno and Julien
+      Fiegehenn)
+    - HTML::Form bumped to 6.08 (GH#347) (Julien Fiegehenn)
+
     [ENHANCEMENTS]
     - Add autocheck() to enable or disable autochecking at run time in
       addition to setting it at object creation (GH#232) (Julien Fiegehenn)
