--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for WWW::Mechanize
 
+{{$NEXT}}
+
 2.14      2022-08-15 19:19:24Z
     [FIXED]
     - File upload fields now correctly handle overwriting the file name and
