run test that captures STDERR without taint mode #350
It seems that on certain Windows versions File::Temp is not working
properly when run under taint mode. This problem must have been around
for a while. Test::Output uses File::Temp, and therefore runs into this
problem as our mech-dump.t has had the -T flag enabled. I do not know
why we run under taint for some tests, but I have decided the most
pragmatic fix is to undo my previous changes from #292 to the test an to
move this particular test into its own file, which can run without
taint.

Also see https://www.perlmonks.org/?node_id=1122816 for details on the
original problem.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for WWW::Mechanize
 
 {{$NEXT}}
+    [FIXED]
+    - There was a test suite failure on some Windows machines introduced in
+      2.14 that is now fixed. (GH#350) (Julien Fiegehenn)
     [ENHANCEMENTS]
     - form_with and all_forms_with() now support the "action" attribute to find
       forms (GH#349) (Julien Fiegehenn)
