--- a/Changes
+++ b/Changes
@@ -1,11 +1,15 @@
 Revision history for WWW::Mechanize
 
 {{$NEXT}}
+    [FIXED]
+    - Raise minimum Perl to 5.8 to match what we test, what dependencies
+      depend on, etc. (GH#352) (James Raspass)
 
 2.15      2022-08-21 07:47:35Z
     [FIXED]
     - There was a test suite failure on some Windows machines introduced in
       2.14 that is now fixed. (GH#350) (Julien Fiegehenn)
+
     [ENHANCEMENTS]
     - form_with and all_forms_with() now support the "action" attribute to find
       forms (GH#349) (Julien Fiegehenn)
