--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for WWW::Mechanize
 
+{{$NEXT}}
+
 2.16      2023-02-11 12:09:16Z
     [FIXED]
     - Raise minimum Perl to 5.8 to match what we test, what dependencies
