perltidy and enable tidy tests for t, pm and scripts
This is how it works: What is required to be tidy is controlled by
tidyall.ini. Anything listed in the perltidy section will be tested for
tidiness. This happens after dzil has made changes to our files. The
ignored files come from the documentation of
Dist-Zilla-Plugin-Test-TidyAll.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for WWW::Mechanize
 
 {{$NEXT}}
+    [ENHANCEMENTS]
+    - Perltidied the entire dist, and enabled tests for it (Julien Fiegehenn)
 
 2.16      2023-02-11 12:09:16Z
     [FIXED]
