--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for WWW::Mechanize
 
+{{$NEXT}}
+
 2.17      2023-04-27 15:45:01Z
     [ENHANCEMENTS]
     - Perltidied the entire dist, and enabled tests for it (Julien Fiegehenn)
