--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for WWW::Mechanize
 
 {{$NEXT}}
+    [FIXED]
+    - Fix click_button non exclusive attributes (GH#371) (Andreas  Huber)
     [TESTS]
     - Remove t/untaint.t (GH#377) (Olaf Alders)
 
