--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for WWW::Mechanize
 
 {{$NEXT}}
+    - Fix minor typo in SYNOPSIS example code comment (GH#379) (Paul Cochrane)
 
 2.18      2024-01-30 14:29:44Z
     [FIXED]
