Replace "base" with "parent"
As per the documentation, parent is encouraged these days: "Unless
you are using the fields pragma, consider this module discouraged
in favor of the lighter-weight parent."

Since we don't use the fields pragma let's use parent. It'll only be
an extra dep for Perl 5.8 users since it's core in 5.10+.

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for WWW::Mechanize
 
 {{$NEXT}}
     - Fix minor typo in SYNOPSIS example code comment (GH#379) (Paul Cochrane)
+    - Replace "base" with "parent" (GH#381) (James Raspass)
 
 2.18      2024-01-30 14:29:44Z
     [FIXED]
